use docker to run test cases